--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
     "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "RakshithRajkumar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel-bundler": "^1.8.1"
+  },
+  "dependencies": {
+    "parcel": "^1.12.4"
+  }
 }
