--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "author": "RakshithRajkumar",
   "license": "ISC",
   "devDependencies": {
-    "parcel-bundler": "^1.8.1"
-  },
-  "dependencies": {
+    "parcel-bundler": "^1.8.1",
     "parcel": "^1.12.4"
-  }
+  },
+  "dependencies": {}
 }
