--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "RakshithRajkumar",
   "license": "ISC",
   "devDependencies": {
-    "parcel-bundler": "^1.8.1",
-    "parcel": "^1.12.4"
-  },
-  "dependencies": {}
+    "parcel": "^2.9.1",
+    "parcel-bundler": "^1.8.1"
+  }
 }
