--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "RakshithRajkumar",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.9.1",
-    "parcel-bundler": "^1.8.1"
+    "parcel": "^2.9.1"
   }
 }
